--- a/App1/MainPage.xaml
+++ b/App1/MainPage.xaml
@@ -48,7 +48,7 @@
             <Button x:Name="zero" Content="0" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Height="70" Width="100" Click="Number_click"/>
             <Button x:Name="point" Content="." HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Top" Height="70" Width="100" Click="Number_click"/>
             <Button x:Name="clear" Content="CLEAR" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Top" Height="70" Width="100" Click="clear_Click"/>
-            <Button x:Name="submit" Content="ENTER" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Top" Height="70" Width="305"/>
+            <Button x:Name="submit" Content="ENTER" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Top" Height="70" Width="305" Click="enter_Click"/>
         </StackPanel>
         <StackPanel Grid.Row="0" Grid.ColumnSpan="5" Grid.RowSpan="2" HorizontalAlignment="Left" Height="auto" Margin="325,10,0,0" VerticalAlignment="Top" Width="auto">
             <TextBox x:Name="answer" HorizontalAlignment="Left" Margin="0,0,0,0" TextAlignment="Right" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="70" Width="313"/>
