Adding functions to the save and load calculation button to save and load from local storage

--- a/App1/MainPage.xaml
+++ b/App1/MainPage.xaml
@@ -45,8 +45,8 @@
             <Button x:Name="one" Content="1" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Height="70" Width="100" Click="Number_click"/>
             <Button x:Name="two" Content="2" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Top" Height="70" Width="100" Click="Number_click"/>
             <Button x:Name="three" Content="3" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Top" Height="70" Width="100" Click="Number_click"/>
-            <Button x:Name="save_Calc" Content="Save Calculation" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Top" Height="70" Width="150"/>
-            <Button x:Name="load_Calc" Content="Load Calculation" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Top" Height="70" Width="150"/>
+            <Button x:Name="save_Calc" Content="Save Calculation" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Top" Height="70" Width="150" Click="save"/>
+            <Button x:Name="load_Calc" Content="Load Calculation" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Top" Height="70" Width="150" Click="load"/>
         </StackPanel>
         <StackPanel Grid.Row="3" Grid.ColumnSpan="5" Orientation="Horizontal" HorizontalAlignment="Left" Height="auto" Margin="10,0,0,0" VerticalAlignment="Top" Width="auto">
             <Button x:Name="zero" Content="0" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Height="70" Width="100" Click="Number_click"/>
